--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.5.8+2
+  camera: ^0.8.0
   flutter_native_image: ^0.0.5+3
   image_picker: ^0.7.2
   permission_handler: ^6.0.1
