--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.8.0
-  flutter_native_image: ^0.0.5+3
   image_picker: ^0.7.2
   permission_handler: ^8.0.1
-  path_provider: ^2.0.1
+  camera: ^0.8.1+7
+  flutter_native_image: ^0.0.6+1
+  path_provider: ^2.0.2
+  native_screenshot: ^1.0.0
   android_gallery_picker:
     git:
       url: https://github.com/leovu/android_gallery_picker.git
